Made bug fixes.

--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
     <main id="main">
         <div id="title">
             <h1>Herbert E. Douglass</h1>
-            <p>One of the most influential Adventist theologian of the 20th Century</p>
+            <p>One of the most influential Adventist theologians of the 20th Century</p>
         </div>
         <div id="img-div">
             <img id="image"
                 src="https://www.adventistreview.org/assets/public/news/2014-12/rsz_herb_douglass_seated_at_desk_1973.jpg"
                 alt="Herbert Douglass pictured in 1973 while working at the Review and Herald now the Adventist Review">
-            <p id="img-caption">Herbert Douglass pictured in 1973 while working at the Review and Herald (now the <a
-                    href="https://www.adventistreview.org">Adventist Review</a>).</p>
+            <p id="img-caption">Herbert Douglass pictured in 1973 while working at the <i>Review and Herald</i> &nbsp;(now the <a
+                    href="https://www.adventistreview.org" style="font-style: italic">Adventist Review</a>).</p>
         </div>
         <div id="tribute-info">
             <h2>Timeline of Douglass' Life</h2>
             <ul>
                 <li><span>1927</span> born in Springfield, Massachusetts</li>
-                <li><span>1954-1957</span> served on the staff that edited, the Seventh-day Adventist Bible Commentary
+                <li><span>1954-1957</span> served on the staff that edited the <i>Seventh-day Adventist Bible Commentary</i>
                 </li>
                 <li><span>1964</span> earned Doctorate in Theology at Pacific School of Religion</li>
                 <li><span>1967-1970</span> served as president of Atlantic Union College</li>
-                <li><span>1970-1976</span> served as editor of <i>The Review and Herald</i> magazine (now the <a
-                        href="https://www.adventistreview.org">Adventist Review</a>)</li>
-                <li><span>1979-1985</span> served as associate Book Editor and vice-president for Editorial Development
+                <li><span>1970-1976</span> served as editor of the <i>Review and Herald</i> magazine (now the <a
+                        href="https://www.adventistreview.org" style="font-style: italic">Adventist Review</a>)</li>
+                <li><span>1979-1985</span> served as associate book editor and vice-president for editorial development
                     at the <a href="https://www.pacificpress.com">Pacific Press Publishing Association</a></li>
                 <li><span>1985-1992</span> served as president of <a href="https://weimar.edu">Weimar Institute</a></li>
                 <li><span>1997-2001</span> served as vice-president for philanthropy at <a
@@ -67,13 +67,13 @@
             </blockquote>
             <p>If you have time, you should read more about Herbert Douglass at the <a
                     href="https://www.adventistreview.org/church-news/herbert-e.-douglass’-greatest-contribution-to-adventist-theology"
-                    target="_blank">Adventist Review</a> and his <a id="tribute-link"
+                    target="_blank" style="font-style: italic">Adventist Review</a> and his <a id="tribute-link"
                     href="https://en.wikipedia.org/wiki/Herbert_E._Douglass" target="_blank">Wikipedia</a> entry.</p>
         </div>
     </main>
     <footer>
         <div class="personal-contact-information">
-            <a href="mailto:rietmanb@hyahoo.com?subject=feedback" class="fa fa-envelope"></a>
+            <a href="mailto:rietmanb@yahoo.com?subject=feedback" class="fa fa-envelope"></a>
             <a href="https://www.linkedin.com/in/benjamin-rietman-346a07164/" class="fa fa-linkedin"
                 target="_blank"></a>
         </div>
